--- a/frontend/src/assets/scss/_style.scss
+++ b/frontend/src/assets/scss/_style.scss
@@ -637,7 +637,7 @@ input:-webkit-autofill {
 
 @media screen and (max-width: 991px) {
   .ras-header .logo {
-    max-width: 60px;
+    max-width: 80px;
   }
 }
 
